Job de logs viejos, sort by de resultados y estilos

--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "sails": "0.9.4",
     "grunt": "0.4.1",
     "sails-disk": "~0.9.0",
-    "ejs": "0.8.4",
+    "ejs": "~0.8.4",
     "optimist": "0.3.4",
     "ua-parser-js": "~0.6.2",
     "extend": "~1.2.0",
     "dateformat": "~1.0.6-1.2.3",
     "errortoenglish-despegar": "0.0.6",
-    "sails-mysql" : "0.9"
+    "sails-mysql": "0.9"
   },
   "scripts": {
     "start": "node app.js",
