--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dateformat": "~1.0.6-1.2.3",
     "errortoenglish-despegar": "0.0.6",
     "sails-mysql": "0.9",
-    "source-map": "~0.1.30"
+    "source-map": "~0.1.30",
+    "mysql": "~2.0.0-alpha9"
   },
   "scripts": {
     "start": "node app.js",
