--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "sails-mysql": "0.9",
     "source-map": "~0.1.30",
     "mysql": "~2.0.0-alpha9",
-    "newrelic": "~1.0.1"
+    "newrelic": "~1.0.1",
+    "grunt-groundskeeper": "~0.1.5"
   },
   "scripts": {
     "start": "node app.js",
