--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "source-map": "~0.1.30",
     "mysql": "~2.0.0-alpha9",
     "newrelic": "~1.0.1",
-    "grunt-groundskeeper": "~0.1.5"
+    "grunt-tasks-despegar": "~0.1.0",
   },
   "scripts": {
     "start": "node app.js",
