--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mysql": "~2.0.0-alpha9",
     "newrelic": "~1.0.1",
     "grunt-tasks-despegar": "~0.1.0",
-    "express-helpers": "~1.3.1"
+    "express-helpers": "~1.3.1",
+    "formidable": "~1.0.14"
   },
   "scripts": {
     "start": "node app.js",
